--- a/style/global.css
+++ b/style/global.css
@@ -21,6 +21,8 @@ body {
   font-family: var(--ff);
   font-size: var(--fs-base);
   color: var(--grey-900);
+  width: 100%;
+  height: 100vh;
 }
 
 a {
